Fix spacing (again)

--- a/pages/opus1/styles.css
+++ b/pages/opus1/styles.css
@@ -98,5 +98,5 @@ a{
 
 .links{
     display: flex;
-    margin-top: 3vw;
+    margin-top: 2.5vw;
 }
